rds.tf
resource "aws_db_instance" "project-1" {
  allocated_storage      = 10
  identifier             = "kitproject-1"
  engine                 = "mysql"
  engine_version         = "5.7"
  instance_class         = "db.t3.micro"
  name                   = "mydb"
  username               = "foo"
  password               = "foobarbaz"
  parameter_group_name   = "default.mysql5.7"
  skip_final_snapshot    = true
  vpc_security_group_ids = [aws_security_group.project-1.id]
}
